<?xml version="1.0"?>
<package format="2">
  <name>pybullet_simulation</name>
  <version>0.0.0</version>
  <description>The pybullet_simulation package</description>

  <maintainer email="m.delledonne002@unibs.it">MicheleDelledonne</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>message_generation</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>message_runtime</depend>

  <export>

  </export>
</package>
